# VetCPA

./: .gitignore  README.md
.github/workflows/: release.yml
pdf_to_csv/: .dockerignore  Dockerfile  Makefile  README.md  VetCPA.spec  docker-compose.yml  pyproject.toml  requirements.txt
pdf_to_csv/scripts/: build_macos.sh  build_windows.ps1  make_dmg.sh  uninstall_macos.sh  uninstall_windows.ps1
pdf_to_csv/src/pdf_to_csv/: __init__.py  account_type.py  api.py  cli.py  config.py  docling_client.py  feedback_store.py  ingest.py  launcher.py  model_status.py  model_warmup.py  models.py  pipeline.py
pdf_to_csv/src/pdf_to_csv/parsers/: __init__.py  base_parser.py  generic_table.py  scotiabank_passport_visa.py
pdf_to_csv/src/pdf_to_csv/static/: index.html
pdf_to_csv/tests/: test_account_type.py  test_api_extract.py  test_api_feedback_and_export.py  test_cli_extract.py  test_cli_feedback.py  test_cli_inspect.py  test_docling_client.py  test_feedback_store.py  test_generic_table_parser.py  test_ingest.py  test_model_status.py  test_model_warmup.py  test_pipeline_end_to_end.py  test_scaffolding.py  test_scotiabank_parser.py
