[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-csv"
version = "0.1.0"
description = "Convert bank and credit card statement PDFs into a unified CSV/Excel format using Docling."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ANIML / VetCPA" }]
license = { text = "Proprietary" }

dependencies = [
    "docling>=2.0.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "typer>=0.12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
pdf-to-csv = "pdf_to_csv.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdf_to_csv = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
