[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-csv"
version = "0.1.3"
description = "Convert bank and credit card statement PDFs into a unified CSV/Excel format using Docling."
# The README lives at the repo root (one level up from this pyproject.toml)
# so the GitHub landing page renders it automatically. We omit the
# package-level `readme = ...` rather than point at `../README.md` because
# setuptools rejects paths that escape the project dir.
requires-python = ">=3.11"
authors = [{ name = "ANIML / VetCPA" }]
license = { text = "Proprietary" }

dependencies = [
    "docling>=2.0.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "typer>=0.12",
    "pydantic>=2.6",
    "pillow>=10.0",
    "pillow-heif>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
bundle = [
    "pyinstaller>=6.8",
]

[project.scripts]
pdf-to-csv = "pdf_to_csv.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdf_to_csv = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
